feat: add starship

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,10 @@
 set -g mouse on
+
 set -g base-index 1
 set -g pane-base-index 1
-set-option -g renumber-windows on
 set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
 set-option -g repeat-time 0
 set-option -g set-clipboard on
 set -g visual-activity off
@@ -18,6 +20,8 @@ bind -T copy-mode-vi H send -X start-of-line
 bind -T copy-mode-vi L send -X end-of-line
 bind -T copy-mode-vi Escape send -X cancel
 
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
+
 bind -n M-H previous-window
 bind -n M-L next-window
 
@@ -31,6 +35,12 @@ bind | split-window -h -c "#{pane_current_path}"
 # set-option -a terminal-overrides ",*256col*:RGB"
 
 set-option -sa terminal-overrides ",xterm*:Tc"
+
+# if-shell "uname -m | grep -q arm64" "display-message 'Hello, m1!'" "display-message 'Hello, intel!'"
+
+# if-shell 'test "$(uname -m)" = "arm64"' \
+    # 'source-file ~/.tmux.conf.arm64' \
+    # 'source-file ~/.tmux.conf.x86_64'
 
 if-shell 'test -e /opt/homebrew/bin/fish' {
     set -g default-shell "/opt/homebrew/bin/fish"
