--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,6 @@
 import:
   - ~/.config/alacritty/themes/dracula.yml
-  - ~/.config/alacritty/fonts/operator-ssm.yml
+  - ~/.config/alacritty/fonts/operator-nf.yml
 
 env:
   TERM: xterm-256color
@@ -36,15 +36,15 @@ cursor:
 
   vi_mode_style: Block
 
-# shell:
-#   program: /bin/zsh
-#   args:
-#     - --login
-
 shell:
-  program: /opt/homebrew/bin/fish
+  program: /usr/local/bin/fish
   args:
     - --login
+
+# shell:
+  # program: /opt/homebrew/bin/fish
+  # args:
+    # - --login
 
 hints:
   enabled:
